Shared mesh used for Mesh Deform causes crash #39610

Closed
opened 2014-04-05 20:23:58 +02:00 by Jun T · 15 comments

System Information
Arch Linux (x86-64)
nVidia Geforce GTX 670

Blender Version
Broken: 2.70 19e627c, 2.70 4550731
Worked: 2.69

Short description of error
Editing the mesh that referenced by Mesh deform on other objects causes crash.

Exact steps for others to reproduce the error
Open crash_meshdeform.blend.
Edit the mesh. (Both adding and moving vertexes cause crash)
It doesn't always happen immediately but will happen within 1 minute.

**System Information** Arch Linux (x86-64) nVidia Geforce GTX 670 **Blender Version** Broken: 2.70 19e627c, 2.70 4550731 Worked: 2.69 **Short description of error** Editing the mesh that referenced by Mesh deform on other objects causes crash. **Exact steps for others to reproduce the error** Open [crash_meshdeform.blend](https://archive.blender.org/developer/F84039/crash_meshdeform.blend). Edit the mesh. (Both adding and moving vertexes cause crash) It doesn't always happen immediately but will happen within 1 minute.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @junt

Added subscriber: @junt
Author

There is a correction part.
(Both adding and moving vertexes cause crash)

  • Adding vertexes is not necessary for crash
There is a correction part. ~~(Both adding and moving vertexes cause crash)~~ + Adding vertexes is not necessary for crash

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Cannot confirm a crash, Mac OS X, e51841c.

Cannot confirm a crash, Mac OS X, e51841c.

Added subscriber: @koilz

Added subscriber: @koilz

Crash on Windows 7 32 bit, AMD Radeon HD 7310M.
Broken: Blender 2.70 32 bit 19e627c.
Worked: Blender 2.69.7 32 bit 4b206af.

Crash on Windows 7 32 bit, AMD Radeon HD 7310M. Broken: Blender 2.70 32 bit 19e627c. Worked: Blender 2.69.7 32 bit 4b206af.
Author

On b95e826, Mac OS X 10.9.2, it happens too when select all mesh and rotate quickly. It happens at random but the way made a big change crashes easily.

On b95e826, Mac OS X 10.9.2, it happens too when select all mesh and rotate quickly. It happens at random but the way made a big change crashes easily.

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Sergey Sharybin self-assigned this 2014-04-10 18:33:53 +02:00

Really weird issue. Perhaps threading-related. Will have a look.

Really weird issue. Perhaps threading-related. Will have a look.

This issue was referenced by blender/blender-addons-contrib@97881d06b2

This issue was referenced by blender/blender-addons-contrib@97881d06b221fbe5db98c5e5b3d2b9ecd0a22b38

This issue was referenced by 97881d06b2

This issue was referenced by 97881d06b221fbe5db98c5e5b3d2b9ecd0a22b38

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 97881d06b2.

Closed by commit 97881d06b2.

For now i've disabled the meshdeform modifier update in edit mode if it uses shared mesh between multiple objects and editing happens of a different object from what's used in the meshdeform modifier.
Proper solution would be to use more granular dependency graph. We're working on this but it'll take some time.

For now i've disabled the meshdeform modifier update in edit mode if it uses shared mesh between multiple objects and editing happens of a different object from what's used in the meshdeform modifier. Proper solution would be to use more granular dependency graph. We're working on this but it'll take some time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39610
No description provided.